--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16"
+  },
+  "scripts": {
+    "dev": "next dev",
+    "dev-alt": "next dev -p 3001",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   }
 }
