--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.5",
-    "@emotion/styled": "^11.13.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
-    
+    "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "framer-motion": "^11.13.1",
     "next": "15.0.3",
     "react": "^18.3.1",
