--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,24 @@
 aiofiles==23.2.1
 annotated-types==0.6.0
 anyio==4.3.0
+arrow==1.3.0
 bcrypt==4.0.1
 click==8.1.7
+dnspython==2.6.1
 ecdsa==0.19.0
+email_validator==2.2.0
+exceptiongroup==1.2.2
 fastapi==0.110.1
+greenlet==3.1.1
 h11==0.14.0
 idna==3.7
 passlib==1.7.4
+psycopg2-binary==2.9.10
 pyasn1==0.6.0
 pydantic==2.7.0
 pydantic_core==2.18.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.9
 rsa==4.9
@@ -18,8 +26,6 @@ six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.29
 starlette==0.37.2
+types-python-dateutil==2.9.0.20241206
 typing_extensions==4.11.0
 uvicorn==0.29.0
-python-dotenv
-email-validator
-
