--- a/app/cloudbuild.yaml
+++ b/app/cloudbuild.yaml
@@ -25,7 +25,7 @@ steps:
     ]
 
 options:
-  default_logs_bucket_behavior: CLOUD_LOGGING_ONLY 
+  logging: CLOUD_LOGGING_ONLY 
 
 substitutions:
   _API_URL: "https://ticketease-frontend-prod-abc123.a.run.app"
