--- a/frontend/cloudbuild.yaml
+++ b/frontend/cloudbuild.yaml
@@ -23,7 +23,7 @@ steps:
     ]
 
 options:
-  default_logs_bucket_behavior: CLOUD_LOGGING_ONLY 
+  logging: CLOUD_LOGGING_ONLY 
 
 substitutions:
   _ENV: "staging"  # 或 production，可依照觸發條件切換
