--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,18 +1,18 @@
-# build 階段
+# frontend/Dockerfile
+
 FROM node:21.5.0-alpine AS builder
 
 WORKDIR /app
-COPY frontend/package*.json ./
-RUN npm install
+COPY package*.json ./
+RUN npm ci
 
-COPY frontend/ ./
+COPY . .
 RUN npm run build
 
-# production 階段
 FROM node:21.5.0-alpine
 
 WORKDIR /app
-COPY --from=builder /app ./
+COPY --from=builder /app .
 
 EXPOSE 3000
 CMD ["npm", "start"]
