--- a/app/cloudbuild.yaml
+++ b/app/cloudbuild.yaml
@@ -12,7 +12,6 @@ steps:
       - SECRET_KEY
       - AUTH_ALGORITHM
       - SUPABASE_DB_URL
-      - API_URL
 
   # 🚚 Push Backend
   - name: 'gcr.io/cloud-builders/docker'
@@ -46,8 +45,9 @@ availableSecrets:
         versionName: projects/$PROJECT_ID/secrets/AUTH_ALGORITHM/versions/latest
       - key: SUPABASE_DB_URL
         versionName: projects/$PROJECT_ID/secrets/SUPABASE_DB_URL/versions/latest
-      - key: API_URL
-        versionName: projects/$PROJECT_ID/secrets/API_URL/versions/latest
+
+substitutions:
+  _API_URL: "https://ticketease-frontend-staging-396633212684.asia-east1.run.app/"
 
 options:
   logging: CLOUD_LOGGING_ONLY
