--- a/app/cloudbuild.yaml
+++ b/app/cloudbuild.yaml
@@ -31,20 +31,16 @@ steps:
       - '--platform=managed'
       - '--allow-unauthenticated'
     env:
-      - 'SECRET_KEY'
-      - 'AUTH_ALGORITHM'
-      - 'SUPABASE_DB_URL'
-      - 'API_URL'
+      - API_URL=${_API_URL}
+      - SECRET_KEY
+      - AUTH_ALGORITHM
+      - SUPABASE_DB_URL
 
-availableSecrets:
-  secretManager:
-    env:
-      - key: SECRET_KEY
-        versionName: projects/$PROJECT_ID/secrets/SECRET_KEY/versions/latest
-      - key: AUTH_ALGORITHM
-        versionName: projects/$PROJECT_ID/secrets/AUTH_ALGORITHM/versions/latest
-      - key: SUPABASE_DB_URL
-        versionName: projects/$PROJECT_ID/secrets/SUPABASE_DB_URL/versions/latest
+secrets:
+  - secretEnv:
+      SECRET_KEY: projects/$PROJECT_ID/secrets/SECRET_KEY/versions/latest
+      AUTH_ALGORITHM: projects/$PROJECT_ID/secrets/AUTH_ALGORITHM/versions/latest
+      SUPABASE_DB_URL: projects/$PROJECT_ID/secrets/SUPABASE_DB_URL/versions/latest
 
 substitutions:
   _API_URL: "https://ticketease-frontend-staging-396633212684.asia-east1.run.app/"
