--- a/app/cloudbuild.yaml
+++ b/app/cloudbuild.yaml
@@ -1,5 +1,4 @@
 steps:
-  # 🔧 Build Backend
   - name: 'gcr.io/cloud-builders/docker'
     id: Build Backend
     dir: 'app'
@@ -13,13 +12,11 @@ steps:
       - AUTH_ALGORITHM
       - SUPABASE_DB_URL
 
-  # 🚚 Push Backend
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - push
       - 'asia-east1-docker.pkg.dev/$PROJECT_ID/ticketease/backend:latest'
 
-  # 🚀 Deploy Backend to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     args:
       - gcloud
@@ -31,16 +28,20 @@ steps:
       - '--platform=managed'
       - '--allow-unauthenticated'
     env:
-      - API_URL=${_API_URL}
+      - API_URL=$_API_URL
       - SECRET_KEY
       - AUTH_ALGORITHM
       - SUPABASE_DB_URL
 
-secrets:
-  - secretEnv:
-      SECRET_KEY: projects/$PROJECT_ID/secrets/SECRET_KEY/versions/latest
-      AUTH_ALGORITHM: projects/$PROJECT_ID/secrets/AUTH_ALGORITHM/versions/latest
-      SUPABASE_DB_URL: projects/$PROJECT_ID/secrets/SUPABASE_DB_URL/versions/latest
+availableSecrets:
+  secretManager:
+    env:
+      - key: SECRET_KEY
+        versionName: projects/$PROJECT_ID/secrets/SECRET_KEY/versions/latest
+      - key: AUTH_ALGORITHM
+        versionName: projects/$PROJECT_ID/secrets/AUTH_ALGORITHM/versions/latest
+      - key: SUPABASE_DB_URL
+        versionName: projects/$PROJECT_ID/secrets/SUPABASE_DB_URL/versions/latest
 
 substitutions:
   _API_URL: "https://ticketease-frontend-staging-396633212684.asia-east1.run.app/"
