--- a/app/cloudbuild.yaml
+++ b/app/cloudbuild.yaml
@@ -1,4 +1,5 @@
 steps:
+  # 🔧 Build Backend
   - name: 'gcr.io/cloud-builders/docker'
     id: Build Backend
     dir: 'app'
@@ -12,11 +13,13 @@ steps:
       - AUTH_ALGORITHM
       - SUPABASE_DB_URL
 
+  # 🚚 Push Backend
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - push
       - 'asia-east1-docker.pkg.dev/$PROJECT_ID/ticketease/backend:latest'
 
+  # 🚀 Deploy Backend to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     args:
       - gcloud
@@ -27,21 +30,16 @@ steps:
       - '--region=asia-east1'
       - '--platform=managed'
       - '--allow-unauthenticated'
-    env:
-      - API_URL=$_API_URL
-      - SECRET_KEY
-      - AUTH_ALGORITHM
-      - SUPABASE_DB_URL
+      - '--set-env-vars=API_URL=${_API_URL},SECRET_KEY=$SECRET_KEY,AUTH_ALGORITHM=$AUTH_ALGORITHM,SUPABASE_DB_URL=$SUPABASE_DB_URL'
 
 availableSecrets:
   secretManager:
-    env:
-      - key: SECRET_KEY
-        versionName: projects/$PROJECT_ID/secrets/SECRET_KEY/versions/latest
-      - key: AUTH_ALGORITHM
-        versionName: projects/$PROJECT_ID/secrets/AUTH_ALGORITHM/versions/latest
-      - key: SUPABASE_DB_URL
-        versionName: projects/$PROJECT_ID/secrets/SUPABASE_DB_URL/versions/latest
+    - versionName: projects/$PROJECT_ID/secrets/SECRET_KEY/versions/latest
+      env: SECRET_KEY
+    - versionName: projects/$PROJECT_ID/secrets/AUTH_ALGORITHM/versions/latest
+      env: AUTH_ALGORITHM
+    - versionName: projects/$PROJECT_ID/secrets/SUPABASE_DB_URL/versions/latest
+      env: SUPABASE_DB_URL
 
 substitutions:
   _API_URL: "https://ticketease-frontend-staging-396633212684.asia-east1.run.app/"
