--- a/app/cloudbuild.yaml
+++ b/app/cloudbuild.yaml
@@ -8,10 +8,6 @@ steps:
       - '-t'
       - 'asia-east1-docker.pkg.dev/$PROJECT_ID/ticketease/backend:latest'
       - '.'
-    secretEnv:
-      - SECRET_KEY
-      - AUTH_ALGORITHM
-      - SUPABASE_DB_URL
 
   # 🚚 Push Backend
   - name: 'gcr.io/cloud-builders/docker'
@@ -21,25 +17,17 @@ steps:
 
   # 🚀 Deploy Backend to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    entrypoint: 'bash'
     args:
-      - gcloud
-      - run
-      - deploy
-      - ticketease-backend-prod
-      - '--image=asia-east1-docker.pkg.dev/$PROJECT_ID/ticketease/backend:latest'
-      - '--region=asia-east1'
-      - '--platform=managed'
-      - '--allow-unauthenticated'
-      - '--set-env-vars=API_URL=${_API_URL},SECRET_KEY=$SECRET_KEY,AUTH_ALGORITHM=$AUTH_ALGORITHM,SUPABASE_DB_URL=$SUPABASE_DB_URL'
-
-availableSecrets:
-  secretManager:
-    - versionName: projects/$PROJECT_ID/secrets/SECRET_KEY/versions/latest
-      env: SECRET_KEY
-    - versionName: projects/$PROJECT_ID/secrets/AUTH_ALGORITHM/versions/latest
-      env: AUTH_ALGORITHM
-    - versionName: projects/$PROJECT_ID/secrets/SUPABASE_DB_URL/versions/latest
-      env: SUPABASE_DB_URL
+      - -c
+      - |
+        gcloud run deploy ticketease-backend-prod \
+          --image=asia-east1-docker.pkg.dev/$PROJECT_ID/ticketease/backend:latest \
+          --region=asia-east1 \
+          --platform=managed \
+          --allow-unauthenticated \
+          --set-env-vars=API_URL=${_API_URL} \
+          --update-secrets=SECRET_KEY=SECRET_KEY:latest,AUTH_ALGORITHM=AUTH_ALGORITHM:latest,SUPABASE_DB_URL=SUPABASE_DB_URL:latest
 
 substitutions:
   _API_URL: "https://ticketease-frontend-staging-396633212684.asia-east1.run.app/"
