--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -15,5 +15,4 @@ COPY . .
 EXPOSE 8080
 
 # 開啟 Uvicorn 啟動 FastAPI
-ENV PYTHONPATH="${PYTHONPATH}:/app"
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8080"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
